# llm-search-agent

./: .env  .gitignore  Dockerfile  LICENSE  README.md  cli.py  cmd.py  main.py  pyproject.toml  requirements.txt  run_api.py  run_cmd.py  run_socket.py
llm_search_agent/: config.py  constants.py  llm_loader.py  logger.py  orchestrator.py  prompt_manager.py
llm_search_agent/agents/: answer_agent.py  intent_agent.py  refinement_agent.py  scoring_agent.py  search_agent.py
llm_search_agent/llm/: abstract_llm.py  ollama.py  openai.py
llm_search_agent/pipeline/agents/: filter_agent.py  search_agent.py
llm_search_agent/runners/: commandline.py  rest_api.py  websocket.py
templates/: answer_generation.prompt  intent_extraction.prompt
