[tool.poetry]
name = "llm-search-agent"
version = "0.0.1"
description = "Performs an agent‑driven web search and generates better answers as a knowledge base for LLMS."
authors = ["Simon S. - youcantbeserious"]
readme = "README.md"
license = "GPL-3.0-or-later"
packages = [ { include = "llm_search_agent" } ]

[tool.poetry.scripts]
cmd = "run_cmd:execute"
api = "run_api:main"
socket = "run_socket:main"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = ">=2.0.0"
langchain = ">=0.3.24"
langchain-community = ">=0.3.22"
langgraph = ">=0.3.33"
requests = ">=2.32.3"
python-dotenv = ">=1.1.0"
langchain-core = "^0.3.55"
langchain-openai = "^0.3.14"
langchain-ollama = "^0.3.2"
websockets = "^15.0.1"
uvicorn = "^0.34.2"
fastapi = "^0.115.12"
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
